infrastructure/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
spec:
  selector:
    app: garage
  ports:
    - name: http-s3
      port: 3900
      targetPort: 3900
    - name: http-web
      port: 3902
      targetPort: 3902
    - name: http-admin
      port: 3903
      targetPort: 3903
---
apiVersion: v1
kind: Service
metadata:
  name: garage-internal
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: garage
  ports:
    - name: rpc
      port: 3901
